# zecs

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  tests.cpp
src/: component_pool.hpp  zecs.cpp  zecs.hpp
